# libapk-qt

./: .gitignore  .gitlab-ci.yml  .gitmodules  ApkQtConfig.cmake.in  CMakeLists.txt  LICENSE  README.md  apk-qt.pc.in  libapk-qt.kdev4
apk-tools-patches/: cpp-compat.patch
cmake/: FindLibApk.cmake
examples/: CMakeLists.txt  test_libapk-qt.cpp
src/: CMakeLists.txt  QtApk  QtApk.cpp  QtApk.h  QtApkChangeset.cpp  QtApkChangeset.h  QtApkDatabase.cpp  QtApkDatabase.h  QtApkDatabaseAsync.cpp  QtApkDatabaseAsync.h  QtApkFlags.h  QtApkPackage.cpp  QtApkPackage.h  QtApkRepository.cpp  QtApkRepository.h  QtApkTransaction.cpp  QtApkTransaction.h  QtApk_metatypes.cpp  QtApk_version.h.in  apk_time_workaround.cpp  errorstr.cpp
src/private/: QtApkDatabaseAsync_private.cpp  QtApkDatabaseAsync_private.h  QtApkDatabase_private.cpp  QtApkDatabase_private.h  QtApkTransaction_private.cpp  QtApkTransaction_private.h  libapk_c_wrappers.c  libapk_c_wrappers.h
tests/: CMakeLists.txt  test_add.cpp  test_async_api.cpp  test_async_api_upgrade.cpp  test_changeset.cpp  test_db_update.cpp  test_del.cpp  test_fakeroot.cpp  test_openclose.cpp  test_print_packages.cpp  test_progressfd.cpp  test_reposconfig.cpp
tests/testdata/: README.txt  create_fakeroot.sh
tests/testdata/files/: installed  repositories  scripts.tar  triggers  world
